--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "express": "^4.19.2",
     "node-osc": "^9.1.1",
